--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,10 @@
     <head>
         <meta name="title" content="Basic Mechanical Engineering" />
         <meta name="description" content="The website contains the chapter wise and topic wise videos for the all the chapters of the subject Basic Mechanical Engineering." />
-        <meta name="keywords" content="mechanical,engineering,neeraj chavda, mechanical engineeringmechanical engineering jobs,mechanical engineering jobs ahmedabad,mechanical engineering jobs surat,mechanical engineering salary,mechanical engineering jobs in gujarat,mechanical engineering colleges in ahmedabad,mechanical engineering jobs in ahmedabad for fresher,mechanical engineering subjects,mechanical engineering aptitude,mechanical engineering apprentice training 2021,mechanical engineering after 12th commerce,mechanical engineering admission 2021,mechanical engineering after 10th,mechanical engineering apprenticeship 2021,mechanical engineering applications,mechanical engineering all subjects list,mechanical engineering books,mechanical engineering books pdf,mechanical engineering branches,mechanical engineering blog,mechanical engineering basic knowledge,mechanical engineering background,mechanical engineering career" />
+        <meta
+            name="keywords"
+            content="mechanical,engineering,neeraj chavda, mechanical engineeringmechanical engineering jobs,mechanical engineering jobs ahmedabad,mechanical engineering jobs surat,mechanical engineering salary,mechanical engineering jobs in gujarat,mechanical engineering colleges in ahmedabad,mechanical engineering jobs in ahmedabad for fresher,mechanical engineering subjects,mechanical engineering aptitude,mechanical engineering apprentice training 2021,mechanical engineering after 12th commerce,mechanical engineering admission 2021,mechanical engineering after 10th,mechanical engineering apprenticeship 2021,mechanical engineering applications,mechanical engineering all subjects list,mechanical engineering books,mechanical engineering books pdf,mechanical engineering branches,mechanical engineering blog,mechanical engineering basic knowledge,mechanical engineering background,mechanical engineering career"
+        />
         <meta name="robots" content="index, follow" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
@@ -13,7 +16,6 @@
         <title>Mechanical Engineering</title>
     </head>
     <body class="font-inter">
-        
         <!-- navBar -->
         <header class="bg-gray-900 md:bg-transparent absolute top-0 z-50 w-full nav-shadow duration-200 py-0.5">
             <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-full mx-auto">
@@ -43,31 +45,56 @@
                 </div>
             </div>
         </header>
-        
 
         <section class="section-bg flex flex-col justify-center items-center">
-            <h1 class="text-6xl font-semibold text-white text-center">Basic Mechanical <br> Engineering</h1>
-            <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
-            <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT Collage</h2>
-            <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start E-Learning >></a>            
+            <div class="flex flex-col justify-center items-center container mx-auto">
+                <h1 class="text-6xl font-semibold text-white text-center">
+                    Basic Mechanical <br />
+                    Engineering
+                </h1>
+                <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
+                <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT V.V. Nagar</h2>
+                <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start E-Learning >></a>
+            </div>
         </section>
         <section id="faculty" class="bg-gray-50 py-8">
             <h1 class="font-medium text-3xl w-full text-center text-indigo-700">About Faculty</h1>
-            <div class="flex flex-col text-center md:text-left md:flex-row justify-center items-center px-4 md:px-24 py-5">
-                <img src="/img/neerajsir_pic.jpeg" class="w-28 rounded-full" alt="Neeraj Chavda">
-                <p class="my-6 md:my-0 md:mx-5 text-lg text-gray-800">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quibusdam eius animi odit nam? Perferendis magnam quaerat esse facilis labore, dolore blanditiis tempora nesciunt totam laboriosam sint. Non, cupiditate nostrum!</p>
+            <div class="flex flex-col text-left justify-center items-center px-4 container mx-auto md:px-24 py-5">
+                <img src="/img/neerajsir_pic.jpeg" class="w-52 my-5 rounded-full" alt="Neeraj Chavda" />
+                <div class="my-6 md:my-0 md:mx-5 text-sm text-gray-700">
+                    <p class="my-1.5"><i class="text-xl text-indigo-500 mr-2 fa fa-angle-double-right" aria-hidden="true"></i>Dr. N. K. Chavda is presently working as Associate Professor in Mechanical Engineering Department at Madhuben and Bhanubhai Patel Institute of Technology (A Constituent College of CVM University), New Vallabh Vidyanagar.</p>
+                    <p class="my-1.5"><i class="text-xl text-indigo-500 mr-2 fa fa-angle-double-right" aria-hidden="true"></i>He has completed his B. E. (Mech) and M. E. (Mech) from Government Engineering College, Modasa and Sardar Vallabhbhai National Institute of Technology, Surat. He has completed Ph.D. from The M. S. University of Baroda, Vadodara.</p>
+                    <p class="my-1.5">
+                        <i class="text-xl text-indigo-500 mr-2 fa fa-angle-double-right" aria-hidden="true"></i>He has about 25 years of teaching and research experience. He has prepared <a href="https://www.youtube.com/user/neerajchavda/featured" class="text-indigo-600" target="_blank">YouTube channel <i class="fa fa-external-link" aria-hidden="true"></i></a>, and uploaded technical video related to Basic Mechanical Engineering.
+                    </p>
+                    <p class="my-1.5"><i class="text-xl text-indigo-500 mr-2 fa fa-angle-double-right" aria-hidden="true"></i>He has been awarded with Best Polytechnic Teacher for the year 2001 by ISTE, New Delhi and Dronacharya Award for contribution in teaching-learning and overall development of students adjudged by A. D. Patel Institute of Technology, New Vallabh Vidyanagar and CVM, Vallabh Vidyanagar on 9th Annual Day of ADIT held on 23rd April, 2009.</p>
+                </div>
             </div>
         </section>
         <section id="chapters" class="bg-indigo-50 py-7 md:py-6">
-            <h1 class="font-medium text-3xl w-full text-center text-indigo-700">Chapters</h1>
-            <%- include('./partials/chapters.ejs');%>
+            <div class="container mx-auto">
+                <h1 class="font-medium text-3xl w-full text-center text-indigo-700">Chapters</h1>
+                <%- include('./partials/chapters.ejs');%>
+            </div>
+        </section>
+        <section id="moodle" class="py-7 px-6 md:px-14 bg-gray-50">
+            <div class="container mx-auto">
+                <h2 class="mb-5 text-3xl text-center font-medium text-indigo-700">Online Quiz</h2>
+                <%- include('./partials/moodle.ejs');%>
+            </div>
+        </section>
+        <section id="reference-books" class="py-7 px-6 md:px-14 bg-indigo-50">
+            <div class="container mx-auto">
+                <h2 class="mb-10 text-3xl text-center font-medium text-indigo-700">Reference Books</h2>
+                <%- include('./partials/reference-books.ejs');%>
+            </div>
         </section>
         <%- include('./partials/footer.ejs');%>
-        
+
         <script>
             // console.log('linked'); target="_blank"
             const navBtn = document.getElementById("navBtn");
-        
+
             navBtn.addEventListener("click", () => {
                 document.querySelector(".navDiv").classList.toggle("navbar-active");
                 document.getElementById("navBar").classList.toggle("links-active");
