--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <header class="relative bg-gray-900 top-0 w-full duration-200">
     <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-full mx-auto">
-        <div class="flex flex-row justify-around items-center w-full md:px-12">
+        <div class="flex flex-row px-4 justify-between md:justify-center items-center w-full md:px-4">
             <div class="px-2 md:px-0">
                 <a href="/">
                     <img class="text-xl w-28 flex title-font font-medium items-center text-gray-900 md:mb-0" src="/img/bme_logo.png" />
