fix a navbar design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <!-- navBar -->
         <header class="bg-gray-900 md:bg-transparent absolute top-0 z-50 w-full nav-shadow duration-200 py-0.5">
             <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-full mx-auto">
-                <div class="flex flex-row justify-around items-center w-full md:px-12">
+                <div class="flex flex-row px-4 justify-between items-center w-full md:px-12">
                     <div class="px-2 md:px-0">
                         <a href="/">
                             <img class="text-xl w-28 flex title-font font-medium items-center text-gray-900 md:mb-0" src="/img/bme_logo.png" />
