--- a/views/partials/reference-books.ejs
+++ b/views/partials/reference-books.ejs
@@ -3,3 +3,9 @@
 <p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(3)</span> Elements of Mechanical Engineering – Tutorial (as per GTU),  By Neeraj Chavda, Lap Lambert Academic Publishing, Germany (ISBN : 978-613-9-82424-3)</p>
 <p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(4)</span> Basic Mechanical Engineering (Elements of Mechanical Engineering), By J. P. Hadiya, H. G. Katariya and S. M. Bhatt, Books India Publications.</p>
 <p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(5)</span> Thermodynamics: An Engineering Approach Seventh Edition in SI Units, Yunus A. Cengel, Michael A. Boles, McGraw-Hill, 2011.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(6)</span> Basic Mechanical Engineering, By Pravin Kumar, Pearson Publications.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(7)</span> Engineering Thermodynamics, By Rayner Joel.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(8)</span> Thermal Science and Engineering, By Dr. D. S. Kumar, S. K. Kataria & sons Publications.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(9)</span> Fundamental of Mechanical Engineering, By G. S. Sawhney, PHI Publications.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(10)</span> Elements of Mechanical Engineering, By Sadhu Singh, S. Chand Publication.</p>
+<p class="my-2 text-sm text-gray-700"> <span class="text-indigo-500">(11)</span> Elements of Mechanical Engineering, By P. S.Desai and S. B.Soni.</p>
