--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
                     Engineering
                 </h1>
                 <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
-                <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT V.V. Nagar</h2>
+                <h2 class="text-base text-center text-gray-400 mt-1">Associate Professor, <br> Madhuben & Bhanubhai patel institute of technology V.V. Nagar</h2>
                 <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start E-Learning >></a>
             </div>
         </section>
