removed console varification file and added meta tag varification

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
             name="keywords"
             content="mechanical,engineering,neeraj chavda, mechanical engineeringmechanical engineering jobs,mechanical engineering jobs ahmedabad,mechanical engineering jobs surat,mechanical engineering salary,mechanical engineering jobs in gujarat,mechanical engineering colleges in ahmedabad,mechanical engineering jobs in ahmedabad for fresher,mechanical engineering subjects,mechanical engineering aptitude,mechanical engineering apprentice training 2021,mechanical engineering after 12th commerce,mechanical engineering admission 2021,mechanical engineering after 10th,mechanical engineering apprenticeship 2021,mechanical engineering applications,mechanical engineering all subjects list,mechanical engineering books,mechanical engineering books pdf,mechanical engineering branches,mechanical engineering blog,mechanical engineering basic knowledge,mechanical engineering background,mechanical engineering career"
         />
+        <meta name="google-site-verification" content="MD8aDILFnAsTxwPVOYUuGpBII-rh8tBm_Te_qrqbqpY" />
         <meta name="robots" content="index, follow" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
