change fav-icon link and added sitemap

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,6 @@
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon" />
+<link rel="shortcut icon" href="https://basic-mechanical-engineering.herokuapp.com/img/fav-icon.png" type="image/x-icon" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6036528993346308"
      crossorigin="anonymous"></script>
